Opened 17 years ago
Closed 17 years ago
#1742 closed bug (fixed)
svn crash after updating a working copy
Reported by: | oco | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet/Stack | Version: | R1/pre-alpha1 |
Keywords: | Cc: | andreasf | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
i run "svn update" on a freepascal working copy.
svn crash after writing the message "Updated to revision..."
Here is the call stack :
0x00000000 in ?? () 0x003840b3 in net_data_destroy () from /boot/beos/system/lib/libnetwork.so 0x003def4e in _thread_do_exit_notification () from /boot/beos/system/lib/libroot.so 0x00432131 in exit () from /boot/beos/system/lib/libroot.so 0x00204c52 in _start () 0x001007d8 in ?? ()
I use revision 23832 and svn package from http://www.haiku-os.org/development.
Change History (4)
comment:1 by , 17 years ago
Cc: | added |
---|
comment:2 by , 17 years ago
I've had a brief look at the source (irs_data.c); could it be that under some circumstances net_data->irs == NULL
? This is the only field there that's not guarded.
I get a similar crash with the 1.0.6 package.